[project]
name = "github-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<=3.13"
dependencies = [
    "google-generativeai>=0.8.3",
    "ipykernel>=6.29.5",
    "openai>=1.58.1",
    "phidata>=2.7.5",
    "pydotenv>=0.0.7",
    "requests>=2.32.3",
    "streamlit>=1.41.1",
]
